--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-, "app/components/LoginForm.jsx", "app/dashboard/layout.jsx"  ],
+, "app/components/LoginForm.jsx", "app/dashboard/layout.jsx", "app/page.jsx"  ],
   "exclude": ["node_modules"]
 }
